[package]
name = "photonbyte_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hickory-proto = "0.24"
async-trait = "0.1"
dashmap = "5.5"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
# hickory-dns = 

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false
